--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "leaflet.sector",
   "version": "1.0.0",
   "description": "Leaflet Sectors",
-  "main": "leaflet.arc.js",
+  "main": "leaflet.sector.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup --config rollup.config.js"
